[gd_scene load_steps=5 format=3 uid="uid://cj3bn8twrw2d3"]

[ext_resource type="Script" path="res://scripts/musics.gd" id="1_l01ag"]
[ext_resource type="AudioStream" uid="uid://ds00rqqegdnff" path="res://assets/BaseMenuMusic.mp3" id="1_x0ryt"]
[ext_resource type="AudioStream" uid="uid://bhlrtrs4orpsu" path="res://assets/BaseGameMusic.mp3" id="2_l4h1q"]
[ext_resource type="AudioStream" uid="uid://bm0ihjkepv3yx" path="res://assets/BaseClic.mp3" id="4_j7u2s"]

[node name="Musics" type="Node"]
script = ExtResource("1_l01ag")

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_x0ryt")
volume_db = 10.0
bus = &"Music"

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_l4h1q")
bus = &"Music"

[node name="ClicSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_j7u2s")
bus = &"Sound"
